[gd_scene load_steps=5 format=3 uid="uid://b13aq5t1axcpm"]

[ext_resource type="Theme" uid="uid://brt1frgstdh0o" path="res://ingame_theme.tres" id="1_cbnda"]
[ext_resource type="Script" path="res://Ship5Results.gd" id="2_k06i7"]
[ext_resource type="FontFile" uid="uid://03csj1uxxf2d" path="res://fonts/prstartk.ttf" id="3_o1qk0"]
[ext_resource type="FontFile" uid="uid://dgt8dl70ius2f" path="res://fonts/pcsenior.ttf" id="4_4hq1m"]

[node name="Ship5Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cbnda")
script = ExtResource("2_k06i7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 144.0
color = Color(0.878431, 0.972549, 0.815686, 1)

[node name="LabelRating" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_top = 29.0
offset_right = 167.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0.533333, 0.752941, 0.439216, 1)
theme_override_colors/font_shadow_color = Color(0.0313726, 0.0941176, 0.12549, 1)
theme_override_colors/font_outline_color = Color(0.0313726, 0.0941176, 0.12549, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_o1qk0")
theme_override_font_sizes/font_size = 57
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelResults" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_top = 12.0
offset_right = 160.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0.203922, 0.407843, 0.337255, 1)
theme_override_fonts/font = ExtResource("4_4hq1m")
theme_override_font_sizes/font_size = 16
text = "Results"
horizontal_alignment = 1

[node name="LabelReward" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_top = 110.0
offset_right = 160.0
offset_bottom = 124.0
theme_override_colors/font_color = Color(0.533333, 0.752941, 0.439216, 1)
theme_override_fonts/font = ExtResource("4_4hq1m")
theme_override_font_sizes/font_size = 8
text = "Reward: 200$"
horizontal_alignment = 1

[node name="LabelMessage" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_top = 93.0
offset_right = 160.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0.533333, 0.752941, 0.439216, 1)
theme_override_font_sizes/font_size = 12
text = "Awesome!"
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0
autoplay = true
